# D-Wave-VRP

./: README.md  requirements.txt
.claude/hooks/: session-start.sh
ferrum-nexus/: .gitignore  DECISIONS.md  RUNBOOK.md  pyproject.toml
ferrum-nexus/.claude/commands/: fn-adl.md  fn-awards.md  fn-blockers.md  fn-docs.md  fn-doctor.md  fn-outcome.md  fn-pull.md  fn-quote-add.md  fn-quote.md  fn-score.md  fn-setup.md  fn-specs.md  fn-status.md  fn-sync.md
ferrum-nexus/rules/: readiness_rules_v0.yaml
ferrum-nexus/scripts/: _seed_awards.py  _seed_co_clusters.py  _seed_links.py  _seed_market_intel.py  _seed_opportunities.py  _seed_suppliers.py  adl.py  attachments.py  attest.py  awards.py  blockers.py  build_seed_csvs.py  credentials.py  cui.py  db.py  demo_phase2.py  demo_phase3.py  docs.py  doctor.py  fn_sync.py  id_resolver.py  learning.py  notion_client.py  notion_sync.py  pull.py  quote_add.py  quote_render.py  readiness.py  sam_client.py  schema.sql  score.py  seed.py  setup.py  specs_extract.py  specs_store.py  status.py
ferrum-nexus/seed/: awards.csv  co_clusters.csv  links.csv  market_intel.csv  opportunities.csv  suppliers.csv
ferrum-nexus/templates/: adl-request.md
ferrum-nexus/tests/phase0/: test_doctor.py  test_schema.py
ferrum-nexus/tests/phase1/: test_adl_join.py  test_blockers.py  test_docs.py  test_status.py
ferrum-nexus/tests/phase2/: test_extract.py  test_id_resolver.py  test_quote_render.py  test_readiness.py
ferrum-nexus/tests/phase3/: test_attachments.py  test_cui.py  test_endpoints.py  test_pull.py  test_sam_client.py  test_score.py
(+5 files in other folders)
